--- a/src/component/Prdouct/ProductDetails.css
+++ b/src/component/Prdouct/ProductDetails.css
@@ -30,6 +30,8 @@
     width: 20vmax;
     position: relative;
     left: 9.5vw;
+    height: 25vmax;
+    border-radius: 5px;
   }
   
   .detailsBlock-1 > h2 {
