--- a/src/component/Admin/dashboard.css
+++ b/src/component/Admin/dashboard.css
@@ -6,13 +6,13 @@
     max-width: 100%;
     display: grid;
     grid-template-columns: 1fr 5fr;
-    position: absolute;
+    /* position: absolute; */
   }
   
   .dashboardContainer {
     border-left: 1px solid rgba(0, 0, 0, 0.13);
     background-color: rgb(255, 255, 255);
-    padding: 3rem 0;
+    /* padding: 3rem 0; */
   }
   
   .dashboardContainer > h1 {
