--- a/src/component/Admin/sidebar.css
+++ b/src/component/Admin/sidebar.css
@@ -2,14 +2,15 @@
     background-color: rgb(255, 255, 255);
     display: flex;
     flex-direction: column;
-    padding: 4rem 0;
+    padding: 1rem 0;
   }
   
   .sidebar > a:first-child {
     padding: 0;
   }
   .sidebar > a > img {
-    width: 100%;
+    width: 80%;
+    padding-left: 1.5rem;
     transition: all 0.5s;
   }
   
@@ -46,8 +47,17 @@
     background-color: #fff !important;
   }
 
-  /* @media screen and (max-width: 600px) {
+  @media screen and (max-width: 600px) {
+    .sidebar{
+      align-items: center;
+      margin-top: 5rem;
+    }
     .sidebar > a > img {
       width: 28%;
     }
-  } */
+    .sidebar > a:first-child {
+      padding: 0;
+      display: flex;
+      justify-content: center;
+    }
+  }
