--- a/src/component/Order/OrderDetails.css
+++ b/src/component/Order/OrderDetails.css
@@ -10,8 +10,8 @@
   }
   
   .orderDetailsContainer {
-    padding: 5vmax;
-    padding-bottom: 0%;
+    padding: 0 5vmax;
+    /* padding-bottom: 0%; */
   }
   
   .orderDetailsContainer > p {
