--- a/src/component/User/Profile.css
+++ b/src/component/User/Profile.css
@@ -1,9 +1,9 @@
 .profileContainer {
     display: flex;
-    height: 100vh;
+    /* height: 100vh; */
     width: 100vw;
-    position: fixed;
-    top: 0%;
+    position: relative;
+    top: 7vh;
     left: 0%;
     max-width: 100%;
     background-color: white;
@@ -11,7 +11,7 @@
   
   .profileContainer > div {
     display: flex;
-    height: 100vh;
+    height: 65vh;
     width: 100vw;
     max-width: 100%;
     flex-direction: column;
@@ -55,9 +55,13 @@
   .profileContainer > div:last-child {
     justify-content: space-evenly;
     align-items: flex-start;
-    padding: 5vmax;
+    /* padding: 5vmax; */
     box-sizing: border-box;
   }
+
+  /* .profileContainer > div div{
+    margin: 2vh 0;
+  } */
   
   .profileContainer > div:last-child > div > h4 {
     color: black;
