--- a/src/component/layout/About/about.css
+++ b/src/component/layout/About/about.css
@@ -11,15 +11,14 @@
   .aboutSectionGradient {
     background-image: linear-gradient(
       to bottom right,
-      rgb(78, 81, 255),
-      rgb(74, 137, 189)
+      rgb(209 210 236), rgb(216 221 226 / 27%)
     );
   }
   
   .aboutSectionContainer {
     position: absolute;
     left: 50%;
-    top: 50%;
+    top: 44%;
     background-color: rgb(255, 255, 255);
     width: 80vw;
     height: 80vh;
