--- a/src/component/layout/Footer/Footer.css
+++ b/src/component/layout/Footer/Footer.css
@@ -17,6 +17,8 @@ footer {
   .leftFooter > h4 {
     font-family: "Roboto";
     font-size: 1vmax;
+    text-align: center;
+    margin-bottom: 1vh;
   }
   .leftFooter > p {
     text-align: center;
