--- a/src/component/layout/Header/Header.css
+++ b/src/component/layout/Header/Header.css
@@ -50,8 +50,8 @@
 .nav-menu{
     display: flex;
     justify-content: space-evenly;
-    position: relative;
-    right: 5vw;
+    /* position: relative;
+    right: 5vw; */
 }
 .nav-menu a{
     font: 200 1.1rem "Roboto";
@@ -119,7 +119,7 @@ a:hover{
     flex-direction: column;
     justify-content: center;
     background-color: darkslategray;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     height: 50%;
@@ -140,9 +140,8 @@ a:hover{
     .nav-menu a{
         margin: 1vh;
     }
-    .loginNav{
-        position: relative;
-        right: 5vw;
+    .loginNav a {
+        margin: 0 1.3vw;
     }
 }
 
