--- a/src/component/Home/Home.css
+++ b/src/component/Home/Home.css
@@ -127,6 +127,10 @@
     transform: translateY(-1vmax);
   }
   
+  /* .PageNotFound{
+    height: auto !important;
+  } */
+  
   @media screen and (max-width: 600px) {
     .banner::after {
       height: 100vmin;
